--- a/public/index.html
+++ b/public/index.html
@@ -4,29 +4,38 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="icon" href="<%= BASE_URL %>images/favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>images/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>images/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>images/favicon-16x16.png" />
+    <link rel="manifest" href="<%= BASE_URL %>images/site.webmanifest" />
+    <link rel="mask-icon" href="<%= BASE_URL %>images/safari-pinned-tab.svg" color="#ff7676" />
+    <link rel="shortcut icon" href="<%= BASE_URL %>images/favicon.ico" />
+    <meta name="apple-mobile-web-app-title" content="Guitar Tuner" />
+    <meta name="application-name" content="Guitar Tuner" />
+    <meta name="msapplication-TileColor" content="#252525" />
+    <meta name="msapplication-config" content="<%= BASE_URL %>images/browserconfig.xml" />
+    <meta name="theme-color" content="#252525" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://www.googletagmanager.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-C6GLQ71HLC"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-C6GLQ71HLC');
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+      gtag('config', 'G-C6GLQ71HLC')
     </script>
   </head>
   <body>
     <noscript>
-      <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.
+      <strong>
+        We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please
+        enable it to continue.
       </strong>
     </noscript>
     <div id="app"></div>
