--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>images/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>images/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>images/favicon-16x16.png" />
-    <link rel="manifest" href="<%= BASE_URL %>images/site.webmanifest" />
+    <link rel="manifest" crossorigin="use-credentials" href="manifest.json"/>
     <link rel="mask-icon" href="<%= BASE_URL %>images/safari-pinned-tab.svg" color="#ff7676" />
     <link rel="shortcut icon" href="<%= BASE_URL %>images/favicon.ico" />
     <meta name="apple-mobile-web-app-title" content="Guitar Tuner" />
